--- a/index.html
+++ b/index.html
@@ -184,6 +184,11 @@
     </main>
 
     <script src="./scriptl.js"></script>
+    <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
+        data-id="m.vishwanath" data-description="Support me on Buy me a coffee!"
+        data-message="Thank you for visiting. You can now buy me a coffee." data-color="#5F7FFF" data-position="Right"
+        data-x_margin="18" data-y_margin="18"></script>
+    
     <footer>Copyright © 2023
         All Rights are reserved</footer>
     <footer>Made by 
