--- a/About.html
+++ b/About.html
@@ -99,7 +99,7 @@
                 <section class="about_container">
                     <div class="card">
                         <div class="header_card">
-                            <h3>What is CINEMAA?</h3><span><svg xmlns="http://www.w3.org/2000/svg" width="16"
+                            <h3>What is North Star?</h3><span><svg xmlns="http://www.w3.org/2000/svg" width="16"
                                     height="16" fill="white" class="bi bi-chevron-down" viewBox="0 0 16 16">
                                     <path class="about_arrow" fill-rule="evenodd"
                                         d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
