--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
 <body class="body">
     <main class="main">
           <section class="alertMsg">
-            <h2 class="alertMsg_header">TV shows added</h2>
-            <p class="alertMsg_para">Search now includes movies and tv shows.
-                More updates coming soon !!! <br> stay tuned Thank You!😊</p>
+            <div class="alertMsg-inner">Welcome to North Star</div>
+            <h2 class="alertMsg_header">watch Now !!</h2>
+            <p class="alertMsg_para">KGF chapter-2
+                on North Star for free
+            </p>
             <button class="okaybtn">Okay</button>
         </section>
         <div class="overlay"></div>
