--- a/movieDetail.html
+++ b/movieDetail.html
@@ -18,18 +18,8 @@
 
 <body class="body">
 
-    <div class="preloader">
-        <div class="wrapper">
-            <div class="circle"></div>
-            <div class="circle"></div>
-            <div class="circle"></div>
-            <div class="shadow"></div>
-            <div class="shadow"></div>
-            <div class="shadow"></div>
-            <span>Loading</span>
-        </div>
-
-
+    <div id="loader"></div>
+    <div id="content">
     </div>
 
 
