--- a/movieDetail.html
+++ b/movieDetail.html
@@ -17,10 +17,21 @@
 </head>
 
 <body class="body">
+<div class="preloader">
+        <div class="wrapper">
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="shadow"></div>
+            <div class="shadow"></div>
+            <div class="shadow"></div>
+            <span>Loading.........</span>
+        </div>
 
-    <div id="loader"></div>
-    <div id="content">
+
     </div>
+
+    
 
 
     <main class="main">
