--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           <section class="alertMsg">
             <div class="alertMsg-inner">Welcome to North Star</div>
             <h2 class="alertMsg_header">watch Now !!</h2>
-            <p class="alertMsg_para">Ant-Man and the wasp: Quantumania and
-                Avatar: The way of water for free on NorthStar..!!!!!
+            <p class="alertMsg_para">KGF chapter-1 and 
+                KGF chapter-2 for free on NorthStar..!!!!!
             </p>
             <button class="okaybtn">Okay</button>
         </section>
