--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           <section class="alertMsg">
             <div class="alertMsg-inner">Welcome to North Star</div>
             <h2 class="alertMsg_header">watch Now !!</h2>
-            <p class="alertMsg_para">Evil 
-                Dead returns for free on NorthStar..!!!!!
+            <p class="alertMsg_para">Fast X and
+                Spiderman across the Spiderverse for free on NorthStar..!!!!!
             </p>
             <button class="okaybtn">Okay</button>
         </section>
